# CMake

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
Demo/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
Examples/: CMakeLists.txt  plugin.cpp  vcpkg-configuration.json  vcpkg.json
Examples/CopyFilesToSkyrimModFolder/: CMakeLists.txt
Examples/JustOneSKSEPlugin/: CMakeLists.txt  plugin.cpp
Examples/SkyrimModWithJustFiles/: CMakeLists.txt
Images/: Attribution.txt
cmake/: Config.cmake.in  SkyrimScripting.cmake  SkyrimScripting_v0.0.1.cmake
cmake/SkyrimScripting/: common.cmake  copy_files_to_skyrim_mod_folder.cmake  skyrim_mod.cmake
spec/: CMakeLists.txt  Packaging.Spec.cmake  SpecHelper.cmake  add_skse_library.spec.cmake  copy_files_to_skyrim_mod_folder.spec.cmake  skyrim_mod.spec.cmake
